# thunar-plugger

./: ChangeLog  configure.ac
data/: thunar-plugger-shares.desktop
shareman/: README  configure.ac
shareman/data/: shareman.desktop
shareman/src/: shareman.c
src/: Makefile.am  thunar-plugger.h
thunar-plugger/: ChangeLog  README  configure.ac
thunar-plugger/data/: Makefile.am  thunar-plugger-dropbox.desktop  thunar-plugger-shares.desktop
thunar-plugger/src/: Makefile.am  thunar-plugger.c  thunar-plugger.h
